--- a/ui/tools.ui
+++ b/ui/tools.ui
@@ -29,6 +29,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="buttonAlignImage">
+     <property name="text">
+      <string>Align Image</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
