Add icons, implement "Save" + "Save as" and fix image alignment bug

--- a/ui/main.ui
+++ b/ui/main.ui
@@ -101,6 +101,7 @@
      <string>Help</string>
     </property>
     <addaction name="actionAbout"/>
+    <addaction name="actionAboutQt"/>
    </widget>
    <widget class="QMenu" name="menuImage">
     <property name="title">
@@ -163,7 +164,14 @@
     <string>Ctrl+Alt+Z</string>
    </property>
   </action>
+  <action name="actionAboutQt">
+   <property name="text">
+    <string>About Qt</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources/resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
