--- a/ui/edit.ui
+++ b/ui/edit.ui
@@ -20,7 +20,36 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">font: &quot;MS Sans Serif&quot;;</string>
+   <string notr="true">QPushButton {
+	background-color: #0d6efd;
+	border-radius: 10px;
+	padding: 5px;
+	color: white;
+	font-weight: bold;
+}
+
+QPushButton:hover {
+	background-color: #01388a;
+}
+
+QSlider::groove:horizontal {
+    border: 1px solid #999999;
+    height: 8px;
+    background: #dee2e6;
+    margin: 2px 0;
+}
+
+QSlider::handle:horizontal {
+    background: #0d6efd;
+    border: 1px solid #5c5c5c;
+    width: 12px;
+    margin: -2px 0;
+    border-radius: 10px;
+}
+
+QDial {
+	background-color: #01388a;
+}</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -38,6 +67,9 @@
        <italic>false</italic>
        <bold>false</bold>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>Brightness: 0</string>
@@ -173,6 +205,9 @@
    </item>
    <item>
     <widget class="QDial" name="rotationDial">
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
      <property name="maximum">
       <number>360</number>
      </property>
