--- a/ui/tools.ui
+++ b/ui/tools.ui
@@ -13,6 +13,19 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton {
+	background-color: #0d6efd;
+	border-radius: 10px;
+	padding: 5px;
+	color: white;
+	font-weight: bold;
+}
+
+QPushButton:hover {
+	background-color: #01388a;
+}</string>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QPushButton" name="buttonExtractText">
